# Qtclient

./: CMakeLists.txt  main.cpp
inc/: FileSenderThread.h  qcustomplot.h
src/: FileSenderThread.cpp
uiClass/Infrared/: infrared.ui
uiClass/LinkPush/: linkpush.cpp  linkpush.h  linkpush.ui
uiClass/Login/: login.cpp  login.h  login.ui
uiClass/MainWidget/: mainwidget.cpp  mainwidget.h  mainwidget.ui
uiClass/MainWidget/Infrared/: infrared.cpp  infrared.h  infrared.ui
uiClass/MainWidget/ThermoHygroHistory/: thermohygrohistory.cpp  thermohygrohistory.h  thermohygrohistory.ui
uiClass/MainWidget/WaterHeater/: waterheater.h
uiClass/SearchUpgrade/: searchupgrade.cpp  searchupgrade.h  searchupgrade.ui
uiClass/SearchUpgrade/LinkPush/: linkpush.cpp  linkpush.ui
uiClass/ThermoHygroHistory/: thermohygrohistory.cpp  thermohygrohistory.ui
uiClass/WaterHeater/: waterheater.cpp  waterheater.ui
